# PathwaySeeker

./: .gitignore  LICENSE.txt  MIGRATION.md  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md
MDF/Pathway_01/: pathways.tsv  reactions.xlsx
MDF/Pathway_02/: pathways.tsv  reactions.xlsx
MDF/Pathway_03/: pathways.tsv  reactions.xlsx
MDF/Pathway_04/: pathways.tsv  reactions.xlsx
MDF/Pathway_05/: pathways.tsv  reactions.xlsx
MDF/Pathway_06/: pathways.tsv  (+1 more)
examples/: quickstart.py  quickstart_ai.py
multiomics_graph/: add_reaction_equations.py  annotate_kegg_reactions.py  get_kegg_c_numbers.py  get_kegg_ko_numbers.py  ko_to_reactions.py  main_after_curation.py  main_before_curation.py  match_reactions_all.py  reaction_to_compounds_no_cofactors.py  visualize_metabolites_graph.py
multiomics_graph_addiitonal/: Rtoruloides_graph_notebook.html  Rtoruloides_graph_notebook.json
notebooks/: compound_names_cache.json  multiomics_graph.ipynb  sanity_check_multiomics_graph.ipynb
output/: graph_notebook.html  graph_notebook.json  ko_to_reactions.csv  metabolomics_with_C_numbers.xlsx  metabolomics_with_C_numbers_curated.xlsx  proteomics_with_ko.csv  reaction_equations_cache.json  reaction_to_compounds_no_cofactors.csv
pathway_viz/: .gitignore  README.md  app.py  config.py  conftest.py  convert_reactions_ko.py  forms.py  metabolite_graph.json  metabolite_graph.pickle  metabolomics_with_C_numbers_curated.csv  remove_svg_backgrounds.py  requirements.txt
reference/: kegg_reactions_sce.csv  kegg_reactions_sce_specific.csv
(+62 files in other folders)
